--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -1,1 +1,58 @@
-<router-outlet></router-outlet>
+<!-- Header -->
+<header class="bg-dark text-white text-center py-4">
+    <h1>AdvanceLink Institute</h1>
+</header>
+
+<!-- ADMIN DASHBOARD -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Branch</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Course</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Faculty</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Faculty</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Student</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Attendance</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Examination</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">User</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Logout</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="main">
+    <router-outlet></router-outlet>
+</div>
+
+
+<!-- Footer -->
+<footer class="bg-secondary text-center text-white py-3">
+    <p>&copy; 2023 AdvanceLink Institute. All rights reserved.</p>
+</footer>
