Created Admin Dashboard

--- a/UniversityApp/src/app/app.component.css
+++ b/UniversityApp/src/app/app.component.css
@@ -1,3 +1,8 @@
 .main{
-    background-color: rgb(208, 234, 243);
+    background-color: whitesmoke;
+    min-height: fit-content;
+}
+
+.footer{
+    margin-top: 12px;
 }
