--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -53,6 +53,6 @@
 
 
 <!-- Footer -->
-<footer class="bg-secondary text-center text-white py-3">
+<footer class="bg-secondary text-center text-white py-3 footer">
     <p>&copy; 2023 AdvanceLink Institute. All rights reserved.</p>
 </footer>
