--- a/UniversityApp/src/app/login/login.component.html
+++ b/UniversityApp/src/app/login/login.component.html
@@ -5,8 +5,8 @@
             <h2 class="mb-4">University Login</h2>
             <form>
                 <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username" required>
+                    <label for="userID" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="userID" required>
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
