--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -19,6 +19,9 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#">Department</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">Branch</a>
                 </li>
                 <li class="nav-item">
@@ -43,7 +46,7 @@
                     <a class="nav-link" href="#">User</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <button class="nav-link" type="button" (click)="Logout()">Logout</button>
                 </li>
             </ul>
         </div>
