--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <!-- ADMIN DASHBOARD -->
 
-<div *ngIf="navmode === 'ADMIN'">
+<div *ngIf="navBarService.navBarMode === 'ADMIN'">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
