Build Department HTML

--- a/UniversityApp/src/app/admin/branch/branch.component.html
+++ b/UniversityApp/src/app/admin/branch/branch.component.html
@@ -1,9 +1,27 @@
-<!-- <ul *ngFor="let b of branch">
-<li>
-    Branch Id {{b.id}}
-    Branch Name {{b.Name}}
-    Department Id
-</li>
-</ul>
+<table class="table">
+    <thead>
+      <tr>
+        <th scope="col">DID</th>
+        <th scope="col">Department Name</th>
+        <th scope="col">Contact Number</th>
+        <th scope="col">
+            <button type="button" id="viewDepartment">View</button>
+        </th>
+        <th scope="col">
+            <button type="button" id="viewDepartment">Edit</button>
+        </th>
+        <th scope="col">
+            <button type="button" id="viewDepartment">Delete</button>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+    </tbody>
+  </table>
 
- -->
