--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -18,16 +18,13 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Department</a>
+                    <a class="nav-link" routerLink="admin_DepartmentInfo">Department</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Branch</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Course</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Faculty</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Faculty</a>
