--- a/UniversityApp/src/app/admin/branch/branch.component.html
+++ b/UniversityApp/src/app/admin/branch/branch.component.html
@@ -1,27 +1,28 @@
-<table class="table">
-    <thead>
+<table class="table table-hover">
+  <thead>
       <tr>
-        <th scope="col">DID</th>
-        <th scope="col">Department Name</th>
-        <th scope="col">Contact Number</th>
-        <th scope="col">
-            <button type="button" id="viewDepartment">View</button>
-        </th>
-        <th scope="col">
-            <button type="button" id="viewDepartment">Edit</button>
-        </th>
-        <th scope="col">
-            <button type="button" id="viewDepartment">Delete</button>
-        </th>
+          <th scope="col">BranchID</th>
+          <th scope="col">Branch Name</th>
+          <th scope="col">Department Name</th>
+          <th scope="col">View</th>
+          <th scope="col">Update</th>
+          <th scope="col">Delete</th>
       </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+  </thead>
+  <tbody>
+      <tr *ngFor="let b of objs.branchList">
+          <td>{{b.BranchId}}</td> 
+          <td>{{b.BranchName}}</td>
+          <td >{{b.DepartmentId}}</td>
+          <td>
+              <button type="button" id="viewBranch">View</button>
+          </td>
+          <td>
+              <button type="button" id="EditBranch">Edit</button>
+          </td>
+          <td>
+              <button type="button" id="DeleteBranch">Delete</button>
+          </td>
       </tr>
-    </tbody>
-  </table>
-
+  </tbody>
+</table>
