--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -7,7 +7,7 @@
 
 <div *ngIf="navBarService.navBarMode === 'ADMIN'">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" routerLink = "/admin_dashboard">Admin Dashboard</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -15,13 +15,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" routerLink = "/admin_dashboard">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="admin_DepartmentInfo">Department</a>
+                    <a class="nav-link" routerLink="/admin_DepartmentInfo">Department</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Branch</a>
+                    <a class="nav-link"routerLink="admin_BranchInfo">Branch</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Course</a>
