--- a/UniversityApp/src/app/admin/dashboard/dashboard.component.html
+++ b/UniversityApp/src/app/admin/dashboard/dashboard.component.html
@@ -18,9 +18,9 @@
                     Branch
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">5</h5>
+                    <h5 class="card-title"> {{ branchCount }}</h5>
                     <p class="card-text">Number of Branches</p>
-                    <a routerLink="admin_BranchInfo" class="btn btn-primary">Go</a>
+                    <a routerLink="/admin_BranchInfo" class="btn btn-primary">Go</a>
                 </div>
             </div>
         </div>
