Course List Added

--- a/UniversityApp/src/app/admin/dashboard/dashboard.component.html
+++ b/UniversityApp/src/app/admin/dashboard/dashboard.component.html
@@ -30,10 +30,10 @@
                     Courses
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">10</h5>
+                    <h5 class="card-title"> {{ courseCount }}</h5>
                     <p class="card-text">Number of Courses
                     <p>
-                        <a href="#" class="btn btn-primary">Go</a>
+                        <a routerLink="/admin_CourseInfo"class="btn btn-primary">Go</a>
                 </div>
             </div>
         </div>
