--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -21,10 +21,10 @@
                     <a class="nav-link" routerLink="/admin_DepartmentInfo">Department</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"routerLink="admin_BranchInfo">Branch</a>
+                    <a class="nav-link"routerLink="/admin_BranchInfo">Branch</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Course</a>
+                    <a class="nav-link" routerLink="/admin_CourseInfo">Course</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Faculty</a>
