--- a/UniversityApp/src/app/admin/dashboard/dashboard.component.html
+++ b/UniversityApp/src/app/admin/dashboard/dashboard.component.html
@@ -57,9 +57,9 @@
                     Faculty
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">10</h5>
+                    <h5 class="card-title">{{ facultyCount }} </h5>
                     <p class="card-text">Number of Faculties.</p>
-                    <a href="#" class="btn btn-primary">Go</a>
+                    <a routerLink="/admin_FacultyInfo" class="btn btn-primary">Go</a>
                 </div>
             </div>
         </div>
