--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" routerLink="/admin_CourseInfo">Course</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Faculty</a>
+                    <a class="nav-link" routerLink="/admin_FacultyInfo">Faculty</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Student</a>
