--- a/UniversityApp/src/app/admin/dashboard/dashboard.component.html
+++ b/UniversityApp/src/app/admin/dashboard/dashboard.component.html
@@ -45,9 +45,9 @@
                     Student
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">100</h5>
+                    <h5 class="card-title">{{ studentCount }}</h5>
                     <p class="card-text">Number of Student</p>
-                    <a href="#" class="btn btn-primary">Go</a>
+                    <a routerLink="/admin_StudentInfo" class="btn btn-primary">Go</a>
                 </div>
             </div>
         </div>
