--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" routerLink="/admin_FacultyInfo">Faculty</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Student</a>
+                    <a class="nav-link" routerLink="/admin_StudentInfo">Student</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Attendance</a>
