Add Delete Option

--- a/UniversityApp/src/app/admin/department/department.component.html
+++ b/UniversityApp/src/app/admin/department/department.component.html
@@ -4,21 +4,17 @@
             <th scope="col">DepartmentID</th>
             <th scope="col">Department Name</th>
             <th scope="col">Contact Number</th>
-            <th scope="col">View</th>
             <th scope="col">Update</th>
             <th scope="col">Delete</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let d of objs.depList">
-            <td>{{d.DepartmentId}}</td> 
-            <td>{{d.DepartmentName}}</td>
-            <td>{{d.ContactNumber}}</td>
+            <td (click)="fillForm(d)">{{d.DepartmentId}}</td> 
+            <td (click)="fillForm(d)">{{d.DepartmentName}}</td>
+            <td (click)="fillForm(d)">{{d.ContactNumber}}</td>
             <td>
-                <button type="button" id="viewDepartment">View</button>
-            </td>
-            <td>
-                <button type="button" id="viewDepartment">Edit</button>
+                <button type="button" id="viewDepartment" routerLink="/departmentReg">Edit</button>
             </td>
             <td>
                 <button type="button" id="viewDepartment">Delete</button>
