--- a/UniversityApp/src/app/admin/department-reg/department-reg.component.html
+++ b/UniversityApp/src/app/admin/department-reg/department-reg.component.html
@@ -1,14 +1,26 @@
 <form #form="ngForm" autocomplete="off" (submit)="onSubmit(form)">
-    <input type="hidden" name="DepartmentId" [value]="objService.depData.DepartmentId">
 
     <div class="form-group">
         <div class="input-group">
             <div class="input-group-prepend">
                 <div class="input-group-text bg-white">
-                    <!-- <i class="fa fa-user-circle-o" aria-hidden="true" [class.green-icon]="DepartmentName.valid"
-                        [class.red-icon]="DepartmentName.invalid && DepartmentName.touched"></i> -->
-                    <input name="DepartmentName" #HolderName="ngModel" [(ngModel)]="objService.depData.DepartmentName"
-                        placeholder="PassPort Department Name" class="form-control" required>
+                    <i class="fa fa-user-circle-o" aria-hidden="true" [class.green-icon]="DepartmentId.valid"
+                        [class.red-icon]="DepartmentId.invalid && DepartmentId.touched"></i>
+                    <input readonly name="DepartmentId" #DepartmentId="ngModel" [(ngModel)]="objService.depData.DepartmentId"
+                        placeholder="Department Id" class="form-control"required>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <div class="input-group-text bg-white">
+                    <i class="fa fa-user-circle-o" aria-hidden="true" [class.green-icon]="DepartmentName.valid"
+                        [class.red-icon]="DepartmentName.invalid && DepartmentName.touched"></i>
+                    <input name="DepartmentName" #DepartmentName="ngModel" [(ngModel)]="objService.depData.DepartmentName"
+                        placeholder="Department Name" class="form-control" required>
                 </div>
             </div>
         </div>
