--- a/UniversityApp/src/app/admin/department/department.component.html
+++ b/UniversityApp/src/app/admin/department/department.component.html
@@ -10,11 +10,11 @@
     </thead>
     <tbody>
         <tr *ngFor="let d of objs.depList">
-            <td (click)="fillForm(d)">{{d.DepartmentId}}</td> 
-            <td (click)="fillForm(d)">{{d.DepartmentName}}</td>
-            <td (click)="fillForm(d)">{{d.ContactNumber}}</td>
+            <td>{{d.DepartmentId}}</td> 
+            <td>{{d.DepartmentName}}</td>
+            <td>{{d.ContactNumber}}</td>
             <td>
-                <button type="button" id="viewDepartment" routerLink="/departmentReg">Edit</button>
+                <button type="button" id="viewDepartment" routerLink="/departmentReg" (click)="fillForm(d)">Edit</button>
             </td>
             <td>
                 <button type="button" id="viewDepartment">Delete</button>
