--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -33,13 +33,10 @@
                     <a class="nav-link" routerLink="/admin_StudentInfo">Student</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Attendance</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="#">Examination</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">User</a>
+                    <a class="nav-link" href="/adminInfo">User</a>
                 </li>
                 <li class="nav-item">
                     <button class="nav-link" type="button" (click)="Logout()">Logout</button>
