--- a/UniversityApp/src/app/admin/branch/branch.component.html
+++ b/UniversityApp/src/app/admin/branch/branch.component.html
@@ -1,3 +1,5 @@
+<div><button type="button" (click)="createNew()" routerLink="/branchReg">Create New</button></div>
+
 <table class="table table-hover">
   <thead>
       <tr>
@@ -17,7 +19,7 @@
               <button type="button" id="EditBranch" (click)="fillForm(objs.branchList[i])" routerLink="/branchReg">Edit</button>
           </td>
           <td>
-              <button type="button" id="DeleteBranch">Delete</button>
+              <button type="button" id="DeleteBranch" (click)="onDelete(b.BranchId)">Delete</button>
           </td>
       </tr>
   </tbody>
