--- a/UniversityApp/src/app/admin/course/course.component.html
+++ b/UniversityApp/src/app/admin/course/course.component.html
@@ -1,3 +1,5 @@
+<div><button type="button" (click)="createNew()" routerLink="/courseReg">Create New</button></div>
+
 <table class="table table-hover">
     <thead>
         <tr>
@@ -8,13 +10,12 @@
             <th scope="col">Department Name</th>
             <th scope="col">Syllabus</th>
             <th scope="col">Description</th>
-            <th scope="col">View</th>
             <th scope="col">Update</th>
             <th scope="col">Delete</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let c of objs.CourseAddOnList">
+        <tr *ngFor="let c of objs.CourseAddOnList; let i = index">
             <td>{{c.CourseId}}</td> 
             <td>{{c.CourseCode}}</td>
             <td >{{c.CourseName}}</td>
@@ -23,13 +24,10 @@
             <td>{{c.Syllabus}}</td>
             <td >{{c.Description}}</td>
             <td>
-                <button type="button" id="viewCourse">View</button>
+                <button type="button" id="EditCourse" (click)="fillForm(objs.CourseList[i])" routerLink="/courseReg">Edit</button>
             </td>
             <td>
-                <button type="button" id="EditCourse">Edit</button>
-            </td>
-            <td>
-                <button type="button" id="DeleteCourse">Delete</button>
+                <button type="button" id="DeleteCourse" (click)="onDelete(c.CourseId)" routerLink="/admin_courseInfo">Delete</button>
             </td>
         </tr>
     </tbody>
