--- a/UniversityApp/src/app/login/login.component.css
+++ b/UniversityApp/src/app/login/login.component.css
@@ -1,13 +1,63 @@
 /* Monochrome Body */
 body {
-    background-color: #f5f5f5;
-    color: #333333;
+      /* background-image: url('C:\Users\user\Documents\UMS\UniversityApp\src\app\images\un.jpg') ; */
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: center; 
 }
 
+.container{
+    max-width:400px;
+    margin:0 auto;
+    padding:20px;
+    border:1px solid #ccc;
+    border-radius:5px;
+   background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+h2{
+    text-align: center;
+    color:#333;
+}
+
+.form-label{
+    font-weight: bold;
+}
+
+.form-control{
+    width:100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.form-select{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.btn-dark{
+    width:100%;
+    padding: 10px;
+    background-color: #333;
+    color:#fff;
+    border:none;
+    border-radius: 4px;
+    cursor:pointer;
+}
+
+.btn-dark:hover{
+    background-color: #555;
+}
 
 /* Responsive Styles */
 @media (max-width: 768px) {
-    /* Adjust styles for smaller screens */
+    Adjust styles for smaller screens
     .container {
         padding: 20px;
     }
