--- a/UniversityApp/src/app/app.component.css
+++ b/UniversityApp/src/app/app.component.css
@@ -1,8 +1,24 @@
+.header{
+    background-image: var(--bs-gradient);
+}
+
 .main{
-    background-color: whitesmoke;
-    min-height: fit-content;
+    /* background-color: whitesmoke; */
+    height: 1000px;
+    background-image: url('src\images\university.jpg');
+    background-size: 1920px 1080px;
+    background-repeat: no-repeat;
+    
 }
 
 .footer{
-    margin-top: 12px;
+    /* min-height: 100vh; */
+    display: flex;
+    flex-direction: column;
+    background-color: azure;
+    color: black;
+    text-align: center;
+    left: 0;
+    right: 0;
+    width: 100%;
 }
