--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<header class="bg-dark text-white text-center py-4">
+<header class="bg-primary text-white text-center py-4 header">
     <h1>AdvanceLink Institute</h1>
 </header>
 
