--- a/UniversityApp/src/app/login/login.component.html
+++ b/UniversityApp/src/app/login/login.component.html
@@ -1,5 +1,5 @@
-<!-- Page content -->
-<div class="container mt-5">
+<!-- Page content
+<div class="container mt-5 login">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <h2 class="mb-4">University Login</h2>
@@ -25,4 +25,21 @@
             </form>
         </div>
     </div>
-</div>
+</div> -->
+
+<div class="login-page">
+    <div class="form">
+      <form class="login-form">
+        <input type="text" placeholder="user ID" id="userID" />
+        <input type="password" placeholder="password" id="password"/>
+        <div class="select">        <select type="userType" placeholder="userType" id="userType" >
+            <option value="">Select User Type</option>
+            <option value="Admin">Admin</option>
+            <option value="Student">Student</option>
+            <option value="Faculty">Faculty</option>
+        </select></div>
+
+        <button (click)="Authentication()">login</button>
+      </form>
+    </div>
+  </div>
