--- a/UniversityApp/src/app/login/login.component.css
+++ b/UniversityApp/src/app/login/login.component.css
@@ -1,22 +1,42 @@
-/* Monochrome Body */
+
 body {
-      /* background-image: url('C:\Users\user\Documents\UMS\UniversityApp\src\app\images\un.jpg') ; */
+       /* background-image: url('C:\Users\user\Documents\UMS\UniversityApp\src\assets\image\un.jpg') ; 
    background-size: cover;
    background-repeat: no-repeat;
-   background-position: center; 
+   background-position: center;  */
+   display:flex;
+   justify-content: center;
 }
 
 .container{
-    max-width:400px;
     margin:0 auto;
     padding:20px;
     border:1px solid #ccc;
     border-radius:5px;
-   background-color: #fff;
+    width:420px;
+    background: gray;
+    box-sizing: border-box;
+    font-family:'Poppins',sans-serif;
+    color: black;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+.container .input-box{
+    width: 100%;
+    height: 50px;
+    background: whitesmoke;
+    margin: 30px 0;
+}
+.input-box input{
+    width:100%;
+    height:100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border:2px solid rgba(255,255,255,.2)
 }
 
 h2{
+    font-size: 36px;
     text-align: center;
     color:#333;
 }
