--- a/UniversityApp/src/app/login/login.component.html
+++ b/UniversityApp/src/app/login/login.component.html
@@ -1,18 +1,18 @@
 <!-- Page content -->
-<div class="container mt-5">
+<div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <h2 class="mb-4">University Login</h2>
             <form>
-                <div class="mb-3">
+                <div>
                     <label for="userID" class="form-label">Username</label>
                     <input type="text" class="form-control" id="userID" required>
                 </div>
-                <div class="mb-3">
+                <div>
                     <label for="password" class="form-label">Password</label>
                     <input type="password" class="form-control" id="password" required>
                 </div>
-                <div class="mb-3">
+                <div>
                     <label for="userType" class="form-label">User Type</label>
                     <select class="form-select" id="userType" required>
                         <option value="">Select User Type</option>
