Changes half made

--- a/UniversityApp/src/app/admin/dashboard/dashboard.component.html
+++ b/UniversityApp/src/app/admin/dashboard/dashboard.component.html
@@ -68,7 +68,7 @@
 
 
 <!-- <div class="row"> -->
-<div class="col">
+<!-- <div class="col">
     <div class="container notification">
 
         <h1> Notifications </h1>
@@ -141,5 +141,5 @@
             </tbody>
         </table>
     </div>
-</div>
+</div> -->
 <!-- </div> -->
