--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" routerLink="/admin_StudentInfo">Student</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Examination</a>
+                    <a class="nav-link" href="">Examination</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/adminInfo">User</a>
@@ -47,11 +47,46 @@
 </div>
 
 
+<!-- STUDENT DASHBOARD-->
+<div *ngIf="navBarService.navBarMode === 'STUDENT'">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" routerLink = "/student_dashboard">Student Dashboard</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" routerLink="/student_dashboard">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/student_course">Course</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/student_faculty">Faculty</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/student_courseReg">Registration</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="">Examination</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/student_personalInfo">User</a>
+                </li>
+                <li class="nav-item">
+                    <button class="nav-link" type="button" (click)="Logout()">Logout</button>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 
+<!-- Main Panel -->
 <div class="main">
     <router-outlet></router-outlet>
 </div>
-
 
 <!-- Footer -->
 <footer class="bg-secondary text-center text-white py-3 footer">
