--- a/UniversityApp/src/app/student/course/course.component.html
+++ b/UniversityApp/src/app/student/course/course.component.html
@@ -1,91 +1,54 @@
+<div class="container Available Courses">
+  <h1>Available Courses</h1>
+  <table class="table table-hover">
+    <thead>
+        <tr>
+            <th scope="col">Course ID</th>
+            <th scope="col">Course Code</th>
+            <th scope="col">Course Name</th>
+            <th scope="col">Credits</th>
+            <th scope="col">Syllabus</th>
+            <th scope="col">Description</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let c of courseService.CourseAddOnList;">
+            <td>{{c.CourseId}}</td> 
+            <td>{{c.CourseCode}}</td>
+            <td >{{c.CourseName}}</td>
+            <td>{{c.Credits}}</td> 
+            <td>{{c.Syllabus}}</td>
+            <td >{{c.Description}}</td>
+        </tr>
+    </tbody>
+  </table>
+</div>
 
 
-<body>
-   
-    
-        
-        <section class="semester-selection">
-            <h2>Select Semester</h2>
-            <select id="semesterSelect">
-                <option value="select">Select</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-            </select>
-        </section>
-        
-       
 
-            
-            
-            <table id="courses">
-              <tr>
-                <th>Course Code</th>
-                <th>Course Name</th>
-                <th>Type</th>
-              </tr>
-              <tr>
-                <td>Alfreds Futterkiste</td>
-                <td>Maria Anders</td>
-                <td>Germany</td>
-              </tr>
-              <tr>
-                <td>Berglunds snabbköp</td>
-                <td>Christina Berglund</td>
-                <td>Sweden</td>
-              </tr>
-              <tr>
-                <td>Centro comercial Moctezuma</td>
-                <td>Francisco Chang</td>
-                <td>Mexico</td>
-              </tr>
-              <tr>
-                <td>Ernst Handel</td>
-                <td>Roland Mendel</td>
-                <td>Austria</td>
-              </tr>
-              <tr>
-                <td>Island Trading</td>
-                <td>Helen Bennett</td>
-                <td>UK</td>
-              </tr>
-              <tr>
-                <td>Königlich Essen</td>
-                <td>Philip Cramer</td>
-                <td>Germany</td>
-              </tr>
-              <tr>
-                <td>Laughing Bacchus Winecellars</td>
-                <td>Yoshi Tannamuri</td>
-                <td>Canada</td>
-              </tr>
-              <tr>
-                <td>Magazzini Alimentari Riuniti</td>
-                <td>Giovanni Rovelli</td>
-                <td>Italy</td>
-              </tr>
-              <tr>
-                <td>North/South</td>
-                <td>Simon Crowther</td>
-                <td>UK</td>
-              </tr>
-              <tr>
-                <td>Paris spécialités</td>
-                <td>Marie Bertrand</td>
-                <td>France</td>
-              </tr>
-            </table>
-            
-            
-            
-    
-  
-</body>
+<div class="container RegisteredCourses">
+  <h1>Registered Courses</h1>
+  <table class="table table-hover">
+      <thead>
+          <tr>
+              <th scope="col">Course ID</th>
+              <th scope="col">Course Code</th>
+              <th scope="col">Course Name</th>
+              <th scope="col">Credits</th>
+              <th scope="col">Syllabus</th>
+              <th scope="col">Description</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr *ngFor="let c of courseRegService.CourseRegAddOnList;">
+              <td>{{c.CourseId}}</td> 
+              <td>{{c.CourseCode}}</td>
+              <td >{{c.CourseName}}</td>
+              <td>{{c.Credits}}</td> 
+              <td>{{c.Syllabus}}</td>
+              <td >{{c.Description}}</td>
+          </tr>
+      </tbody>
+    </table>
+</div>
 
