--- a/UniversityApp/src/app/app.component.html
+++ b/UniversityApp/src/app/app.component.html
@@ -83,6 +83,9 @@
     </nav>
 </div>
 
+
+<!-- FACULTY DASHBOARD -->
+
 <!-- Main Panel -->
 <div class="main">
     <router-outlet></router-outlet>
