--- a/UniversityApp/src/app/admin/dashboard/dashboard.component.html
+++ b/UniversityApp/src/app/admin/dashboard/dashboard.component.html
@@ -6,9 +6,10 @@
                     Departments
                 </div>
                 <div class="card-body">
+                 
                     <h5 class="card-title">{{ departmentCount }}</h5>
                     <p class="card-text">Number of Departments</p>
-                    <a class="btn btn-primary" routerLink="/admin_DepartmentInfo">Go</a>
+                    <a class="gobutton" routerLink="/admin_DepartmentInfo">Go</a>
                 </div>
             </div>
         </div>
