--- a/UniversityApp/src/app/faculty/dashboard/dashboard.component.html
+++ b/UniversityApp/src/app/faculty/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-<p>dashboard works!</p>
+<div class="container course-detail"></div>
+
+<div class="container student-list"></div>
+
+<div class="container personal-detail"></div>
