--- a/UniversityApp/src/app/student/course/course.component.html
+++ b/UniversityApp/src/app/student/course/course.component.html
@@ -1,8 +1,8 @@
 <div class="container Available Courses">
-  <h1>Available Courses</h1>
+  <h2 class="text-center">Available Courses</h2>
   <table class="table table-hover">
     <thead>
-        <tr>
+        <tr class="table-warning">
             <th scope="col">Course ID</th>
             <th scope="col">Course Code</th>
             <th scope="col">Course Name</th>
@@ -27,10 +27,10 @@
 
 
 <div class="container RegisteredCourses">
-  <h1>Registered Courses</h1>
+  <h2 class="text-center">Registered Courses</h2>
   <table class="table table-hover">
       <thead>
-          <tr>
+          <tr class="table-warning">
               <th scope="col">Course ID</th>
               <th scope="col">Course Code</th>
               <th scope="col">Course Name</th>
