--- a/UniversityApp/src/app/student/faculty/faculty.component.html
+++ b/UniversityApp/src/app/student/faculty/faculty.component.html
@@ -1,8 +1,8 @@
 <div class="container Available_Courses">
-    <h1>Faculty Assigned</h1>
+    <h2 class="text-center">Faculty Assigned</h2>
     <table class="table table-hover">
         <thead>
-            <tr>
+            <tr class="table-warning">
                 <th scope="col">Faculty ID</th>
                 <th scope="col">First Name</th>
                 <th scope="col">Last Name</th>
