--- a/UniversityApp/src/app/admin/dashboard/dashboard.component.css
+++ b/UniversityApp/src/app/admin/dashboard/dashboard.component.css
@@ -8,3 +8,25 @@
 .Announcement{
     overflow: scroll;
 }
+
+.card-header{
+    text-align:center;
+}
+.card-title{
+    text-align: center;
+}
+.card-text{
+    text-align: center;
+}
+
+.gobutton{
+    background-color: #1a75b0;
+    border: none;
+    color: white;
+    padding: 10px 14px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 6px;
+}
