--- a/UniversityApp/src/app/admin/faculty/faculty.component.html
+++ b/UniversityApp/src/app/admin/faculty/faculty.component.html
@@ -1,9 +1,9 @@
-<div><button type="button" (click)="createNew()" routerLink="/facultyReg">Create New</button></div>
+<div><button type="button" class="btn btn-success"  (click)="createNew()" routerLink="/facultyReg">Create New</button></div>
 
 
 <table class="table table-hover">
     <thead>
-        <tr>
+        <tr class="table-warning" >
             <th scope="col">Faculty ID</th>
             <th scope="col">First Name</th>
             <th scope="col">Last Name</th>
@@ -16,21 +16,21 @@
             <th scope="col">Delete</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="table-group-divider">
         <tr *ngFor="let f of objs.FacultyAddOnList; let i= index">
-            <td>{{f.FacultyId}}</td> 
-            <td>{{f.FirstName}}</td>
-            <td >{{f.LastName}}</td>
-            <td>{{f.Gender}}</td> 
-            <td>{{f.ContactNumber}}</td>
-            <td>{{f.Email}}</td>
-            <td >{{f.DepartmentName}}</td>
-            <td >{{f.CourseName}}</td>
+            <td class="align-middle">{{f.FacultyId}}</td> 
+            <td class="align-middle">{{f.FirstName}}</td>
+            <td class="align-middle">{{f.LastName}}</td>
+            <td class="align-middle">{{f.Gender}}</td> 
+            <td class="align-middle">{{f.ContactNumber}}</td>
+            <td class="align-middle">{{f.Email}}</td>
+            <td class="align-middle">{{f.DepartmentName}}</td>
+            <td class="align-middle">{{f.CourseName}}</td>
             <td>
-                <button type="button" id="EditCourse" (click)="fillForm(objs.FacultyList[i])" routerLink="/facultyReg">Edit</button>
+                <button type="button" class="btn btn-outline-primary" id="EditCourse" (click)="fillForm(objs.FacultyList[i])" routerLink="/facultyReg">Edit</button>
             </td>
             <td>
-                <button type="button" id="DeleteCourse" (click)="onDelete(f.FacultyId)">Delete</button>
+                <button type="button" class="btn btn-outline-danger" id="DeleteCourse" (click)="onDelete(f.FacultyId)">Delete</button>
             </td>
         </tr>
     </tbody>
