--- a/UniversityApp/src/app/admin/student/student.component.html
+++ b/UniversityApp/src/app/admin/student/student.component.html
@@ -1,44 +1,44 @@
-<div><button type="button" (click)="createNew()" routerLink="/studentReg">Create New</button></div>
+<div><button type="button" class="btn btn-success" (click)="createNew()" routerLink="/studentReg">Create New</button></div>
 
 
 <table class="table table-hover">
     <thead>
-        <tr>
-            <th scope="col">Student ID</th>
-            <th scope="col">First Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Gender</th>
-            <th scope="col">Contact Number</th>
-            <th scope="col">Email</th>
-            <th scope="col">Date of Birth</th>
-            <th scope="col">Department Name</th>
-            <th scope="col">Branch Name</th>
-            <th scope="col">Enrollment Date</th>
-            <th scope="col">Address</th>
-            <th scope="col">Semester Date</th>
-            <th scope="col">Update</th>
-            <th scope="col">Delete</th>
+        <tr class="table-warning">
+            <th class="text-center" scope="col">Student ID</th>
+            <th class="text-center" scope="col">First Name</th>
+            <th class="text-center" scope="col">Last Name</th>
+            <th class="text-center" scope="col">Gender</th>
+            <th class="text-center" scope="col">Contact Number</th>
+            <th class="text-center" scope="col" text-align: center>Email</th>
+            <th class="text-center" scope="col">Date of Birth</th>
+            <th class="text-center" scope="col">Department Name</th>
+            <th class="text-center" scope="col">Branch Name</th>
+            <th class="text-center" scope="col">Enrollment Date</th>
+            <th class="text-center" scope="col">Address</th>
+            <th class="text-center" scope="col">Semester Date</th>
+            <th class="text-center" scope="col">Update</th>
+            <th class="text-center" scope="col">Delete</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody class="table-group-divider">
         <tr *ngFor="let s of objs.StudentAddOnList; let i=index">
-            <td>{{s.StudentId}}</td> 
-            <td>{{s.FirstName}}</td>
-            <td >{{s.LastName}}</td>
-            <td>{{s.Gender}}</td> 
-            <td>{{s.ContactNumber}}</td>
-            <td>{{s.Email}}</td>
-            <td>{{s.DateOfBirth}}</td>
-            <td >{{s.DepartmentName}}</td>
-            <td >{{s.BranchName}}</td>
-            <td >{{s.EnrollmentDate}}</td>
-            <td >{{s.Saddress}}</td>
-            <td >{{s.Semester}}</td>
+            <td class="align-middle">{{s.StudentId}}</td> 
+            <td class="align-middle">{{s.FirstName}}</td>
+            <td class="align-middle">{{s.LastName}}</td>
+            <td class="align-middle">{{s.Gender}}</td> 
+            <td class="align-middle">{{s.ContactNumber}}</td>
+            <td class="align-middle">{{s.Email}}</td>
+            <td class="align-middle">{{s.DateOfBirth}}</td>
+            <td class="align-middle">{{s.DepartmentName}}</td>
+            <td class="align-middle">{{s.BranchName}}</td>
+            <td class="align-middle">{{s.EnrollmentDate}}</td>
+            <td class="align-middle">{{s.Saddress}}</td>
+            <td class="align-middle">{{s.Semester}}</td>
             <td>
-                <button type="button" id="EditCourse" (click)="fillForm(objs.StudentList[i])" routerLink="/studentReg">Edit</button>
+                <button type="button" class="btn btn-outline-primary"  id="EditCourse" (click)="fillForm(objs.StudentList[i])" routerLink="/studentReg">Edit</button>
             </td>
             <td>
-                <button type="button" id="DeleteCourse" (click)="onDelete(s.StudentId)">Delete</button>
+                <button type="button" class="btn btn-outline-danger"  id="DeleteCourse" (click)="onDelete(s.StudentId)">Delete</button>
             </td>
         </tr>
     </tbody>
