--- a/UniversityApp/src/app/student/dashboard/dashboard.component.html
+++ b/UniversityApp/src/app/student/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
-<div class="container RegisteredCourses">
-    <h1>Registered Courses</h1>
+<div class="container Registered-Courses">
+    <h2 class="text-center">Registered Courses</h2>
     <table class="table table-hover">
         <thead>
-            <tr>
+            <tr class="table-warning">
                 <th scope="col">Course ID</th>
                 <th scope="col">Course Code</th>
                 <th scope="col">Course Name</th>
@@ -24,10 +24,10 @@
       </table>
 </div>
 
-<div class="ExamResult container">
+<div class="Exam-Result container">
     <table class="table table-hover">
         <thead>
-            <tr>
+            <tr  class="table-warning">
                 <th scope="col">Examination ID</th>
                 <th scope="col">Marks Obtained</th>
                 <th scope="col">Grade Name</th>
